# cmake-init

./: .clangd  .gitignore  COPYING  README.md  cmake-init.py
.github/: pull_request_template.md
.github/scripts/: lint-commits.js
.github/workflows/: ci.yml  lint-commits.yml  release.yml
cmake-init/: __main__.py  cmake_init.py  template.py
cmake-init/templates/: README.md
cmake-init/templates/c/common/: .clang-tidy
cmake-init/templates/c/common/example/: CMakeLists.txt  empty_example.c
cmake-init/templates/c/executable/: CMakeLists.txt
cmake-init/templates/c/executable/include/: lib.h
cmake-init/templates/c/executable/source/: lib.c  lib.h  main.c
cmake-init/templates/c/executable/test/: CMakeLists.txt
cmake-init/templates/c/executable/test/source/: __name___test.c
cmake-init/templates/c/header/: CMakeLists.txt
cmake-init/templates/c/header/include/__name__/: __name__.h
cmake-init/templates/c/header/test/source/: __name___test.c  header_impl.c
cmake-init/templates/c/shared/: CMakeLists.txt
cmake-init/templates/c/shared/include/__name__/: __name__.h
cmake-init/templates/c/shared/source/: __name__.c
cmake-init/templates/c/shared/test/source/: __name___test.c
cmake-init/templates/common/: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  conanfile.py  conanfile.txt  env.bat  env.ps1  project-include-after.cmake  vcpkg.json
cmake-init/templates/common/.github/: clang-11.profile  clang-12.profile  clang-14.profile
cmake-init/templates/common/.github/scripts/: conan-ci-setup.sh  conan-profile.sh
cmake-init/templates/common/.github/workflows/: ci.yml  dockcross.yml
cmake-init/templates/common/cmake/: __name__Config.cmake  coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  in-source-guard.cmake  install-config.cmake  install-rules.cmake  install-script.cmake  lint-targets.cmake  lint.cmake  open-cpp-coverage.cmake.example  prelude.cmake  spell.cmake  variables.cmake  windows-set-path.cmake
cmake-init/templates/common/docs/: Doxyfile.in  conf.py.in
cmake-init/templates/common/example/: CMakeLists.txt  empty_example.cpp
cmake-init/templates/common/test/: CMakeLists.txt
cmake-init/templates/executable/: CMakeLists.txt
cmake-init/templates/executable/include/: lib.h
cmake-init/templates/executable/source/: lib.cpp  main.cpp
cmake-init/templates/executable/test/: CMakeLists.txt
cmake-init/templates/executable/test/source/: __name___test.cpp
cmake-init/templates/header/: CMakeLists.txt
cmake-init/templates/header/include/__name__/: __name__.h  __name__.hpp
cmake-init/templates/header/test/source/: __name___test.cpp
cmake-init/templates/shared/: CMakeLists.txt
cmake-init/templates/shared/include/__name__/: __name__.h  __name__.hpp
cmake-init/templates/shared/source/: __name__.cpp
cmake-init/templates/shared/test/source/: __name___test.cpp
cmake-init/templates/vcpkg/: portfile.cmake  vcpkg.json
hooks/: pre-push
package/: setup.py
tools/: ctest2junit.xslt
